# seo-agent

./: .env.example  .gitignore  LICENSE  main.py  plan.md  plan_final.md  plan_review_v2.md  plan_suggestions.md  pyproject.toml
outputs/: final_article.md
plan/: plan_final.md  progress_and_issues.md
scripts/: check.py
src/graph/: graph.py
src/nodes/: editor.py  researcher.py  writer.py
src/prompts/: editor_prompt.py  writer_prompt.py
src/schemas/: output.py  state.py
tests/: test_editor.py  test_graph.py  test_researcher.py  test_writer.py
